# Qwen3VL

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  IMPLEMENTATION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.md  test_api.py  test_api_advanced.py
app/: __init__.py  config.py  engine.py  main.py  models.py  video.py  vln_api.py  vln_webui.py
app/vln/: __init__.py  frame_sampler.py  inference_pipeline.py  prompts.py  task_manager.py  visualizer.py  waypoint_parser.py
scripts/: download_model.sh  entrypoint.sh  start.sh  verify_env.sh
testapi/: test_api.py  test_api_advanced.py  test_media.py
tests/vln/: quick_test.py  test_vln_api.py  test_vln_switch.py  test_vln_video.py
